# filesystem_server

./: .gitignore  MANIFEST.in  PUBLISHING.md  README.md  READY_TO_PUBLISH.md  app.py  config.json  init_results_analysis.py  mcp_configuration_examples.json  pyproject.toml  server.json  setup.py  test_functions.py  test_init_tool.py
.github/: copilot-instructions.md
.github/workflows/: publish-mcp.yml
