[project]
name = "vs-filesystem-mcp-server"
version = "0.1.0"
description = "MCP server for filesystem access with configurable directory and file type restrictions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Oncorporation", email = "support@oncorporation.com"}
]
keywords = ["mcp", "filesystem", "model-context-protocol", "visual-studio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp",
]

[project.urls]
Homepage = "https://github.com/Oncorporation/filesystem_server"
Repository = "https://github.com/Oncorporation/filesystem_server"
Issues = "https://github.com/Oncorporation/filesystem_server/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
vs-filesystem-mcp-server = "app:main"